--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,142 +1,164 @@
-<section class="contacts container">
-   <h2 class="contacts__title visually-hidden">Contacts</h2>
-   <ul class="contacts__list">
-      <li class="contacts__item">
-         <div class="contacts__div">
-            <p class="contacts__place">CAFE</p>
+<section class="contacts">
+   <div class="container">
+      <h2 id="contacts" class="contacts__title visually-hidden">Contacts</h2>
+      <ul class="contacts__list">
+         <li class="contacts__item">
+            <div class="contacts__div">
+               <p class="contacts__place">CAFE</p>
 
-            <p class="contacts__town">Chicago</p>
-            <a class="contacts__link" target="_blank" rel="noreferrer noopener"
-               href="https://www.google.com.ua/maps/place/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+%D0%A1%D0%A8%D0%90/@41.7034056,-87.7819292,17z/data=!3m1!4b1!4m5!3m4!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!8m2!3d41.7034016!4d-87.7797405?hl=ru">
-               10340 Ridgeland Ave, Chicago Ridge, IL 60415,</a>
-         </div>
+               <p class="contacts__town">Chicago</p>
+               <a
+                  class="contacts__link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  href="https://www.google.com.ua/maps/place/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+%D0%A1%D0%A8%D0%90/@41.7034056,-87.7819292,17z/data=!3m1!4b1!4m5!3m4!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!8m2!3d41.7034016!4d-87.7797405?hl=ru"
+               >
+                  10340 Ridgeland Ave, Chicago Ridge, IL 60415,</a
+               >
+            </div>
 
+            <ul class="timetable">
+               <li class="timetable__item">
+                  <p class="timetable__day">Monday - Friday</p>
 
-         <ul class="timetable">
-            <li class="timetable__item">
-               <p class="timetable__day">Monday - Friday</p>
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+               <li class="timetable__item">
+                  <p class="timetable__day">Saturday - Sunday</p>
 
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-            <li class="timetable__item">
-               <p class="timetable__day">Saturday - Sunday</p>
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+            </ul>
 
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-         </ul>
+            <ul class="connect">
+               <li class="connect__item">
+                  <a class="connect__link" href="tel:+610383766284"
+                     >+61(0) 383 766 284</a
+                  >
+               </li>
+               <li class="connect__item">
+                  <a class="connect__link" href="mailto:noreply@envato.com"
+                     >noreply@envato.com</a
+                  >
+               </li>
+            </ul>
+         </li>
+         <li class="contacts__item">
+            <div class="contacts__div">
+               <p class="contacts__place">FOOD TRUCK</p>
 
-         <ul class="connect">
-            <li class="connect__item">
-               <a class="connect__link" href="tel:+610383766284">+61(0) 383 766 284</a>
-            </li>
-            <li class="connect__item">
-               <a class="connect__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-         </ul>
-      </li>
-      <li class="contacts__item">
-         <div class="contacts__div">
-            <p class="contacts__place">FOOD TRUCK</p>
+               <p class="contacts__town">Los Angeles</p>
+               <a
+                  class="contacts__link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  href="https://www.google.com.ua/maps/place/1003+Manhattan+Ave,+Manhattan+Beach,+CA+90266,+%D0%A1%D0%A8%D0%90/@33.8835307,-118.4125173,17z/data=!3m1!4b1!4m5!3m4!1s0x80c2b3eca6743829:0x98448969b9b4373d!8m2!3d33.8835263!4d-118.4103286?hl=ru"
+                  >1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
+               >
+            </div>
 
-            <p class="contacts__town">Los Angeles</p>
-            <a class="contacts__link" target="_blank" rel="noreferrer noopener"
-               href="https://www.google.com.ua/maps/place/1003+Manhattan+Ave,+Manhattan+Beach,+CA+90266,+%D0%A1%D0%A8%D0%90/@33.8835307,-118.4125173,17z/data=!3m1!4b1!4m5!3m4!1s0x80c2b3eca6743829:0x98448969b9b4373d!8m2!3d33.8835263!4d-118.4103286?hl=ru">1003
-               Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
-         </div>
+            <ul class="timetable">
+               <li class="timetable__item">
+                  <p class="timetable__day">Monday - Friday</p>
 
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+               <li class="timetable__item">
+                  <p class="timetable__day">Saturday - Sunday</p>
 
-         <ul class="timetable">
-            <li class="timetable__item">
-               <p class="timetable__day">Monday - Friday</p>
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+            </ul>
 
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-            <li class="timetable__item">
-               <p class="timetable__day">Saturday - Sunday</p>
+            <ul class="connect">
+               <li class="connect__item">
+                  <a class="connect__link" href="tel:+610383766284"
+                     >+61(0) 383 766 284</a
+                  >
+               </li>
+               <li class="connect__item">
+                  <a class="connect__link" href="mailto:noreply@envato.com"
+                     >noreply@envato.com</a
+                  >
+               </li>
+            </ul>
+         </li>
+         <li class="contacts__item">
+            <div class="contacts__div">
+               <p class="contacts__place">CAFE</p>
 
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-         </ul>
+               <p class="contacts__town">New York</p>
+               <a
+                  class="contacts__link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  href="https://www.google.com.ua/maps/place/726+Sterling+Pl,+Brooklyn,+NY+11216,+%D0%A1%D0%A8%D0%90/@40.6726978,-73.9569227,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9e1735b38f:0xb5fe454b88e9c2c0!8m2!3d40.6726938!4d-73.954734?hl=ru"
+                  >726 Sterling Pl, Brooklyn, NY 11222, USA</a
+               >
+            </div>
 
-         <ul class="connect">
-            <li class="connect__item">
-               <a class="connect__link" href="tel:+610383766284">+61(0) 383 766 284</a>
-            </li>
-            <li class="connect__item">
-               <a class="connect__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-         </ul>
-      </li>
-      <li class="contacts__item">
-         <div class="contacts__div">
-            <p class="contacts__place">CAFE</p>
+            <ul class="timetable">
+               <li class="timetable__item">
+                  <p class="timetable__day">Monday - Friday</p>
 
-            <p class="contacts__town">New York</p>
-            <a class="contacts__link" target="_blank" rel="noreferrer noopener"
-               href="https://www.google.com.ua/maps/place/726+Sterling+Pl,+Brooklyn,+NY+11216,+%D0%A1%D0%A8%D0%90/@40.6726978,-73.9569227,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9e1735b38f:0xb5fe454b88e9c2c0!8m2!3d40.6726938!4d-73.954734?hl=ru">726
-               Sterling Pl, Brooklyn, NY 11222, USA</a>
-         </div>
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+               <li class="timetable__item">
+                  <p class="timetable__day">Saturday - Sunday</p>
 
+                  <p class="timetable__time">
+                     <time datetime="06:00">06:00 AM</time> -
+                     <time datetime="22:00">10:00 PM</time>
+                  </p>
+               </li>
+            </ul>
 
-         <ul class="timetable">
-            <li class="timetable__item">
-               <p class="timetable__day">Monday - Friday</p>
-
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-            <li class="timetable__item">
-               <p class="timetable__day">Saturday - Sunday</p>
-
-               <p class="timetable__time">
-                  <time datetime="06:00">06:00 AM</time> -
-                  <time datetime="22:00">10:00 PM</time>
-               </p>
-            </li>
-         </ul>
-
-
-         <ul class="connect">
-            <li class="connect__item">
-               <a class="connect__link" href="tel:+610383766284">+61(0) 383 766 284</a>
-            </li>
-            <li class="connect__item">
-               <a class="connect__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-         </ul>
-      </li>
-   </ul>
-   <ul class="contacts-btn__list">
-      <li class="contacts-btn__item">
-         <button class="contacts-btn__locations" type="button">
-            Our Locations
-            <svg class="contacts-btn__icon" widht="12" height="12">
-               <use href="./images/icons.svg#icon-btn-arrow"></use>
-            </svg>
-         </button>
-      </li>
-      <li class="contacts-btn__item">
-         <button class="contacts-btn__franchise" type="button">
-            Franchise
-            <svg class="contacts-btn__icon" widht="12" height="12">
-               <use href="./images/icons.svg#icon-btn-arrow"></use>
-            </svg>
-         </button>
-      </li>
-   </ul>
+            <ul class="connect">
+               <li class="connect__item">
+                  <a class="connect__link" href="tel:+610383766284"
+                     >+61(0) 383 766 284</a
+                  >
+               </li>
+               <li class="connect__item">
+                  <a class="connect__link" href="mailto:noreply@envato.com"
+                     >noreply@envato.com</a
+                  >
+               </li>
+            </ul>
+         </li>
+      </ul>
+      <ul class="contacts-btn__list">
+         <li class="contacts-btn__item">
+            <button class="contacts-btn__locations" type="button">
+               Our Locations
+               <svg class="contacts-btn__icon">
+                  <use href="./images/icons.svg#icon-btn-arrow"></use>
+               </svg>
+            </button>
+         </li>
+         <li class="contacts-btn__item">
+            <button class="contacts-btn__franchise" type="button">
+               Franchise
+               <svg class="contacts-btn__icon">
+                  <use href="./images/icons.svg#icon-btn-arrow"></use>
+               </svg>
+            </button>
+         </li>
+      </ul>
    </div>
 </section>
