--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<div class="footer">
    <div class="container">
       <div class="footer__wrapper">
          <p class="footer__wrapper-title">HOMEMADE ICE CREAM MADE</p>
@@ -33,8 +33,8 @@
             </ul>
          </div>
          <div class="footer__address">
-            <p class="footer__address-subtitle">Feel free to contact</p>
-            <a class="footer__address-link" href="tel:+61(0)383766284">+61(0)383766284</a>
+            <p class="footer__address-subtitle">Feel free to contact </p>
+            <a class="footer__address-link" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a>
          </div>
       </div>
    </div>
@@ -43,4 +43,5 @@
          © 2022 - IceCream. All Rights Reserved.
       </p>
    </div>
+</div>
 </footer>
