--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -41,12 +41,7 @@
                     </li>
 
                     <li class="hero__item-anchor">
-                        <a href="" class="hero__link hero__anchor-how">How it’s made?</a>
-
-                    <li class="hero__item-anchor btn-how-its-made">
-                        <a href="#how" class="hero__link">How it’s made?</a>
-
-                    </li>
+                        <a href="" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
                 </ul>
             </div>
 
@@ -93,8 +88,7 @@
                 ./images/header/ice-cream-cone__m.png    1x,
                 ./images/header/ice-cream-cone__m@2x.png    2x
                   " type="image/png" media="(max-width: 767px)">
-            <img src="./images/header/ice-cream-cone__t.png" alt="упоротий змій-морозинич" class="hero__img-animation">
-                <img src="./images/header/ice-cream-cone__m.png" alt="упоротий змій-морозинич"
+                <img src="./images/header/ice-cream-cone__t.png" alt="упоротий змій-морозинич"
                     class="hero__img-animation">
             </picture>
 
