--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -12,7 +12,7 @@
   @include desktop () {
     margin-top: -94px;
     margin-bottom: -328px;
-    
+
   }
 
   // &-item {
@@ -31,7 +31,7 @@
 
   &-img {
 
-    width: 280px;
+    width: 100%;
     height: 130px;
     border-radius: 7.41px;
     margin: 0 auto;
@@ -39,13 +39,13 @@
 
 
     @include tablet() {
-      width: 704px;
+      width: 100%;
       height: 320px;
       border-radius: 18px;
     }
 
     @include desktop () {
-      width: 1013px;
+      width: 100%;
       height: 422px;
       border-radius: 24px;
     }
