--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,7 +33,7 @@
             </ul>
          </div>
          <div class="footer__address">
-            <p class="footer__address-subtitle">Feel free to contact </p>
+            <p class="footer__address-subtitle">Feel free to contact&nbsp;</p>
             <a class="footer__address-link" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a>
          </div>
       </div>
