--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -130,7 +130,7 @@
          </button>
       </li>
       <li class="contacts-btn__item">
-         <button class="contacts-btn__franchise" type="button">
+         <button class="contacts-btn__franchise" type="button" data-modal-franches-open>
             Franchise
             <svg class="contacts-btn__icon" widht="12" height="12">
                <use href="./images/icons.svg#icon-btn-arrow"></use>
