Модалки для Мирона

--- a/src/partials/products-modal.html
+++ b/src/partials/products-modal.html
@@ -1,5 +1,5 @@
-<div class="modal-buy">
-   <button class="modal-btn" type="button">
+<div class="modal-buy" data-modal-buy-now>
+   <button class="modal-btn" type="button" data-modal-buy-now-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
       </svg>
@@ -81,7 +81,7 @@
    </ul>
    <form action="" class="modal-buy__form">
       <label for="" class="modal-ingridients__label">
-         <input type="text" class="modal-ingridients__input" placeholder="Name" required>
+         <input type="text" class="modal-ingridients__input" placeholder="Name" required data-modal-buy-now-autofocus>
       </label>
       <label for="" class="modal-ingridients__label">
          <input type="tel" class="modal-ingridients__input" placeholder="Phone" required>
