P1 arrow hoveк focus

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,10 +17,18 @@
                     natural
                     stabilizer</p>
                 <!-- Open modal -->
-                <button type="button" class="">
-                    <svg class="btn__products-icon" width="40" height="16">
-                        <use href="./images/icons.svg#icon-arrow-default"></use>
+                <button type="button" class="products__btn">
+                    <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
+                        <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
+
+                    <svg class="btn__products-icon btn__products-icon--hover" width="50" height="15">
+                        <use class="hover" href="./images/icons.svg#icon-arrow-hover"></use>
+                    </svg>
+                    <svg class="btn__products-icon btn__products-icon--focus" width="50" height="15">
+                        <use class="focus" href="./images/icons.svg#icon-arrow-focus"></use>
+                    </svg>
+
                 </button>
             </li>
 
@@ -31,10 +39,18 @@
                     the
                     use of preservatives and flavor enhancers</p>
                 <!-- Open modal -->
-                <button type="button" class="">
-                    <svg class="btn__products-icon" width="40" height="16">
-                        <use href="./images/icons.svg#icon-arrow-default"></use>
+                <button type="button" class="products__btn">
+                    <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
+                        <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
+
+                    <svg class="btn__products-icon btn__products-icon--hover" width="50" height="15">
+                        <use class="hover" href="./images/icons.svg#icon-arrow-hover"></use>
+                    </svg>
+                    <svg class="btn__products-icon btn__products-icon--focus" width="50" height="15">
+                        <use class="focus" href="./images/icons.svg#icon-arrow-focus"></use>
+                    </svg>
+
                 </button>
             </li>
 
@@ -45,13 +61,17 @@
                     berries and other sweets of your choice
                 </p>
                 <!-- Open modal -->
-                <button type="button" class="">
-                    <svg class="btn__products-icon" width="40" height="16">
+                <button type="button" class="products__btn">
+                    <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
                         <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
-                        <!-- <use class="hover" href="./images/icons.svg#icon-arrow-hover"></use>
-                        <use class="focus" href="./images/icons.svg#icon-arrow-focus"></use> -->
                     </svg>
 
+                    <svg class="btn__products-icon btn__products-icon--hover" width="50" height="15">
+                        <use class="hover" href="./images/icons.svg#icon-arrow-hover"></use>
+                    </svg>
+                    <svg class="btn__products-icon btn__products-icon--focus" width="50" height="15">
+                        <use class="focus" href="./images/icons.svg#icon-arrow-focus"></use>
+                    </svg>
 
                 </button>
             </li>
