--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
                     natural
                     stabilizer</p>
                 <!-- Open modal -->
-                <button type="button" class="products__btn">
+                <button type="button" class="products__btn" data-modal-buy-now-open>
                     <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
                         <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
@@ -39,7 +39,8 @@
                     the
                     use of preservatives and flavor enhancers</p>
                 <!-- Open modal -->
-                <button type="button" class="products__btn">
+
+                <button type="button" class="products__btn" data-modal-buy-now-open>
                     <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
                         <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
@@ -61,7 +62,7 @@
                     berries and other sweets of your choice
                 </p>
                 <!-- Open modal -->
-                <button type="button" class="products__btn">
+                <button type="button" class="products__btn" data-modal-buy-now-open>
                     <svg class="btn__products-icon btn__products-icon--default" width="40" height="15">
                         <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
