--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,10 +1,6 @@
 <header class="container header">
    <a href="" class="logo">
-      <img
-         src="./images/header/logo.png"
-         alt="логотип компанії"
-         class="logo__img"
-      />
+      <img src="./images/header/logo.png" alt="логотип компанії" class="logo__img" />
    </a>
    <nav class="nav" data-menu>
       <ul class="nav__list">
@@ -49,15 +45,11 @@
 
             <ul class="hero__list-anchor">
                <li class="hero__item-anchor">
-                  <a href="#products" class="hero__link hero__anchor-products"
-                     >Products</a
-                  >
+                  <a href="#products" class="hero__link hero__anchor-products">Products</a>
                </li>
 
                <li class="hero__item-anchor">
-                  <a href="" class="hero__link hero__anchor-how how-its-made"
-                     >How it’s made?</a
-                  >
+                  <a href="" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
                </li>
             </ul>
          </div>
@@ -65,28 +57,17 @@
          <div class="hero__lorem-ipsum">
             <picture>
                <!-- desc -->
-               <source
-                  srcset="
+               <source srcset="
                      ./images/header/ice-cream__d.png    1x,
                      ./images/header/ice-cream__d@2x.png 2x
-                  "
-                  type="image/png"
-                  media="(min-width: 1200px)"
-               />
+                  " type="image/png" media="(min-width: 1200px)" />
                <!-- tablet -->
-               <source
-                  srcset="
+               <source srcset="
                      ./images/header/ice-cream__t.png    1x,
                      ./images/header/ice-cream__t@2x.png 2x
-                  "
-                  type="image/png"
-                  media="(max-width: 1199px)"
-               />
-               <img
-                  src="./images/header/ice-cream__t.png"
-                  alt="тарілка з (кульковим морозивом * 9)"
-                  class="hero__img"
-               />
+                  " type="image/png" media="(max-width: 1199px)" />
+               <img src="./images/header/ice-cream__t.png" alt="тарілка з (кульковим морозивом * 9)"
+                  class="hero__img" />
             </picture>
             <div class="hero__lorem">
                <p class="hero__exscerpt">
@@ -94,70 +75,40 @@
                   do eiusmod tempor incididunt ut labore et
                </p>
                <svg class="hero__arrow" height="16" width="40">
-                  <use
-                     href="./images/icons.svg#icon-arrow-default"
-                     class="hero__arrow-use"
-                  ></use>
+                  <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
                </svg>
             </div>
          </div>
       </div>
       <div class="hero__company-info">
          <picture>
-            <source
-               srcset="./images/header/clipped/ice-cream-cone__clipped-d.png"
-               type="image/png"
-               media="(min-width: 1200px)"
-            />
-            <source
-               srcset="./images/header/clipped/ice-cream-cone__clipped-t.png"
-               type="image/png"
-               media="(min-width: 768px)"
-            />
-            <source
-               srcset="./images/header/clipped/ice-cream-cone__clipped-m.png"
-               type="image/png"
-               media="(max-width: 767px)"
-            />
-            <img
-               src="./images/header/clipped/ice-cream-cone__clipped-d.png"
-               alt="упоротий змій-морозинич, який кліпає"
-               class="hero__img-animation"
-            />
+            <source srcset="./images/header/clipped/ice-cream-cone__clipped-d.png" type="image/png"
+               media="(min-width: 1200px)" />
+            <source srcset="./images/header/clipped/ice-cream-cone__clipped-t.png" type="image/png"
+               media="(min-width: 768px)" />
+            <source srcset="./images/header/clipped/ice-cream-cone__clipped-m.png" type="image/png"
+               media="(max-width: 767px)" />
+            <img src="./images/header/clipped/ice-cream-cone__clipped-d.png" alt="упоротий змій-морозинич, який кліпає"
+               class="hero__img-animation" />
          </picture>
          <picture>
             <!-- desc -->
-            <source
-               srcset="
+            <source srcset="
                   ./images/header/ice-cream-cone__d.png    1x,
                   ./images/header/ice-cream-cone__d@2x.png 2x
-               "
-               type="image/png"
-               media="(min-width: 1200px)"
-            />
+               " type="image/png" media="(min-width: 1200px)" />
             <!-- tablet -->
-            <source
-               srcset="
+            <source srcset="
                   ./images/header/ice-cream-cone__t.png    1x,
                   ./images/header/ice-cream-cone__t@2x.png 2x
-               "
-               type="image/png"
-               media="(min-width: 768px)"
-            />
+               " type="image/png" media="(min-width: 768px)" />
             <!-- mobile -->
-            <source
-               srcset="
+            <source srcset="
                   ./images/header/ice-cream-cone__m.png    1x,
                   ./images/header/ice-cream-cone__m@2x.png 2x
-               "
-               type="image/png"
-               media="(max-width: 767px)"
-            />
-            <img
-               src="./images/header/ice-cream-cone__t.png"
-               alt="упоротий змій-морозинич"
-               class="hero__img-animation"
-            />
+               " type="image/png" media="(max-width: 767px)" />
+            <img src="./images/header/ice-cream-cone__t.png" alt="упоротий змій-морозинич"
+               class="hero__img-animation" />
          </picture>
 
          <!-- <div class="hero__cafe-info"> -->
