--- a/src/partials/location-modal.html
+++ b/src/partials/location-modal.html
@@ -1,5 +1,5 @@
-<div class="modal-content visually-hidden">
-   <button class="modal-btn" type="button">
+<div class="modal-content" data-modal-location>
+   <button class="modal-btn" type="button" data-modal-location-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
       </svg>
@@ -10,6 +10,5 @@
       style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
       class="modal-content__map"></iframe>
    <a href="https://goo.gl/maps/b9ngnZK33Z6RigxRA" class="modal-content__link" noreferrer noopener nofollow
-      target="_blank">Open
-      map</a>
+      target="_blank">Open map</a>
 </div>
