--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -122,7 +122,7 @@
    </ul>
    <ul class="contacts-btn__list">
       <li class="contacts-btn__item">
-         <button class="contacts-btn__locations" type="button">
+         <button class="contacts-btn__locations" type="button" data-modal-location-open>
             Our Locations
             <svg class="contacts-btn__icon" widht="12" height="12">
                <use href="./images/icons.svg#icon-btn-arrow"></use>
