--- a/src/partials/about-modal.html
+++ b/src/partials/about-modal.html
@@ -1,5 +1,5 @@
-<div class="modal-content visually-hidden">
-   <button class="modal-btn" type="button">
+<div class="modal-content" data-modal-about>
+   <button class="modal-btn" type="button" data-modal-about-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
       </svg>
