--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -50,7 +50,7 @@
             <p class="about-us__txt about-us__txt--last">
                This is enough to choose ice cream and coffee for any mood!
             </p>
-            <button class="about-us__btn" type="button">
+            <button class="about-us__btn" type="button" data-modal-about-open>
                Read more
                <svg class="about-us__icon" width="12" height="12">
                   <use href="./images/icons.svg#icon-Frame-38"></use>
