--- a/src/partials/location-modal.html
+++ b/src/partials/location-modal.html
@@ -4,7 +4,7 @@
          <use href="./images/icons.svg#icon-menu-close"></use>
       </svg>
    </button>
-   <span class="modal-content__title">How it’s made?</span>
+   <span class="modal-content__title">Our Locations</span>
    <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5064.27394492074!2d34.52775034923044!3d49.60070058942931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d827c41ce87d79%3A0x4a67f65ccb1bc9bc!2z0KLQpiDQmtC40ZfQsiDQn9C-0LvRgtCw0LLQsA!5e0!3m2!1sru!2suk!4v1665769069353!5m2!1sru!2suk"
       style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
