--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -53,7 +53,7 @@
             <button class="about-us__btn" type="button" data-modal-about-open>
                Read more
                <svg class="about-us__icon" width="12" height="12">
-                  <use href="./images/icons.svg#icon-Frame-38"></use>
+                  <use href="./images/icons.svg#icon-btn-arrow"></use>
                </svg>
             </button>
          </div>
