--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,5 @@
 <section class="advantages">
+   <h2 class="visually-hidden">advantages</h2>
    <div class="container advantages__container">
       <ul class="advantages__list">
          <li class="advantages__item">
@@ -16,8 +17,8 @@
                <svg class="advantages__icon" width="50" height="50">
                   <use href="./images/icons.svg#icon-weight">
                   </use>
+               </svg>
             </div>
-            </svg>
             <span class="advantages__info">16kg</span>
             <p class="advantages__text">Aliquam ac dui vel dui
                vulputate
@@ -29,8 +30,8 @@
                <svg class="advantages__icon" width="50" height="50">
                   <use href="./images/icons.svg#icon-ice-cream">
                   </use>
+               </svg>
             </div>
-            </svg>
             <span class="advantages__info">84</span>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
          </li>
