--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -49,7 +49,7 @@
                </li>
 
                <li class="hero__item-anchor">
-                  <a href="" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
+                  <a href="#how" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
                </li>
             </ul>
          </div>
