--- a/src/partials/hero-modal.html
+++ b/src/partials/hero-modal.html
@@ -1,5 +1,5 @@
-<div class="modal-ingridients visually-hidden">
-   <button class="modal-btn" type="button">
+<div class="modal-ingridients visually-hidden" data-modal-products>
+   <button class="modal-btn" type="button" data-modal-products-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
       </svg>
@@ -90,6 +90,6 @@
          <textarea type="text" class="modal-ingridients__input modal-ingridients__textarea"
             placeholder="Comment"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button type="submit" class="submit-btn ">Submit</button>
    </form>
 </div>
