--- a/src/sass/components/modals/_franchise-modal.scss
+++ b/src/sass/components/modals/_franchise-modal.scss
@@ -13,7 +13,14 @@
       min-height: 668px;
       padding: 32px 60px;
    }
+
+   @include tablet {
+      max-width: 570px;
+      min-height: 668px;
+      padding: 32px 60px;
+   }
 }
+
 .modal-btn {
    width: 16px;
    height: 16px;
@@ -21,12 +28,18 @@
    top: 8px;
    right: 8px;
    background-color: transparent;
-   cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
 
    @include desktop {
+      top: 20px;
+      right: 20px;
+      width: 20px;
+      height: 20px;
+   }
+
+   @include tablet {
       top: 20px;
       right: 20px;
       width: 20px;
@@ -42,13 +55,20 @@
 
    @include desktop {
       width: 322px;
-      @include fonts(
-         $ff: 'Seymour One',
+      @include fonts($ff: 'Seymour One',
          $fw: 400,
          $fs: 20px,
          $lh: 28px,
-         $ls: 0
-      );
+         $ls: 0);
+   }
+
+   @include tablet {
+      width: 322px;
+      @include fonts($ff: 'Seymour One',
+         $fw: 400,
+         $fs: 20px,
+         $lh: 28px,
+         $ls: 0);
    }
 }
 
@@ -58,6 +78,11 @@
    @include fonts($ff: 'Montserrat', $fw: 400, $fs: 14px, $lh: 20px, $ls: 0);
 
    @include desktop {
+      @include fonts($ff: 'Montserrat', $fw: 400, $fs: 16px, $lh: 22px, $ls: 0);
+      margin-bottom: 32px;
+   }
+
+   @include tablet {
       @include fonts($ff: 'Montserrat', $fw: 400, $fs: 16px, $lh: 22px, $ls: 0);
       margin-bottom: 32px;
    }
@@ -74,6 +99,12 @@
       align-items: center;
       margin-bottom: 32px;
    }
+
+   @include tablet {
+      gap: 16px;
+      align-items: center;
+      margin-bottom: 32px;
+   }
 }
 
 .franchise-modal__input {
@@ -84,13 +115,20 @@
    border-radius: 10px;
    padding: 8px 12px 7px 12px;
    outline: transparent;
-   cursor: pointer;
+
    @include desktop {
       width: 368px;
       height: 42px;
       padding: 11px 16px 11px 16px;
    }
+
+   @include tablet {
+      width: 368px;
+      height: 42px;
+      padding: 11px 16px 11px 16px;
+   }
 }
+
 .franchise-modal__input-comment {
    width: 224px;
    height: 64px;
@@ -99,9 +137,14 @@
       width: 368px;
       height: 84px;
    }
+
+   @include tablet {
+      width: 368px;
+      height: 84px;
+   }
 }
+
 .submit-btn {
    display: block;
    @include margin-auto;
 }
-
