--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,130 +1,130 @@
-<header class="container header">
-   <a href="" class="logo">
-      <img src="./images/header/logo.png" alt="логотип компанії" class="logo__img" />
-   </a>
-   <nav class="nav" data-menu>
-      <ul class="nav__list">
-         <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-         <li class="nav__item">
-            <a href="" class="nav__link">How it’s made?</a>
-         </li>
-         <li class="nav__item">
-            <a href="" class="nav__link">Our products</a>
-         </li>
-         <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
-      </ul>
-      <button type="button" class="hero__btn__modal buy-now-btn">
+<div class="container">
+   <header class="header">
+      <a href="" class="logo">
+         <img src="./images/header/logo.png" alt="логотип компанії" class="logo__img" />
+      </a>
+      <nav class="nav" data-menu>
+         <ul class="nav__list">
+            <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+            <li class="nav__item">
+               <a href="" class="nav__link">How it’s made?</a>
+            </li>
+            <li class="nav__item">
+               <a href="" class="nav__link">Our products</a>
+            </li>
+            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
+         </ul>
+         <button type="button" class="hero__btn__modal buy-now-btn">
+            Buy now
+            <svg class="btn-icon">
+               <use href="./images/icons.svg#icon-btn-arrow"></use>
+            </svg>
+         </button>
+      </nav>
+      <button type="button" class="btn-menu" data-menu-button>
+         <svg width="32" height="32">
+            <use href="./images/icons.svg#icon-menu-open" class="svg-open"></use>
+            <use href="./images/icons.svg#icon-menu-close" class="svg-close"></use>
+         </svg>
+      </button>
+      <button type="button" class="hero__btn__modal-outside buy-now-btn">
          Buy now
          <svg class="btn-icon">
             <use href="./images/icons.svg#icon-btn-arrow"></use>
          </svg>
       </button>
-   </nav>
-   <button type="button" class="btn-menu" data-menu-button>
-      <svg width="32" height="32">
-         <use href="./images/icons.svg#icon-menu-open" class="svg-open"></use>
-         <use href="./images/icons.svg#icon-menu-close" class="svg-close"></use>
-      </svg>
-   </button>
-   <button type="button" class="hero__btn__modal-outside buy-now-btn">
-      Buy now
-      <svg class="btn-icon">
-         <use href="./images/icons.svg#icon-btn-arrow"></use>
-      </svg>
-   </button>
-</header>
+   </header>
 
-<!-- hero -->
-<main>
-   <section class="container hero">
-      <div class="hero__positions">
-         <div class="hero__info">
-            <h1 class="hero__title">
-               ice cream made with <span>passion</span>
-            </h1>
+   <!-- hero -->
+   <main>
+      <section class="container hero">
+         <div class="hero__positions">
+            <div class="hero__info">
+               <h1 class="hero__title">
+                  ice cream made with <span>passion</span>
+               </h1>
 
-            <ul class="hero__list-anchor">
-               <li class="hero__item-anchor">
-                  <a href="#products" class="hero__link hero__anchor-products">Products</a>
-               </li>
+               <ul class="hero__list-anchor">
+                  <li class="hero__item-anchor">
+                     <a href="#products" class="hero__link hero__anchor-products">Products</a>
+                  </li>
 
-               <li class="hero__item-anchor">
-                  <a href="#how" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
-               </li>
-            </ul>
-         </div>
+                  <li class="hero__item-anchor">
+                     <a href="#how" class="hero__link hero__anchor-how how-its-made">How it’s made?</a>
+                  </li>
+               </ul>
+            </div>
 
-         <div class="hero__lorem-ipsum">
-            <picture>
-               <!-- desc -->
-               <source srcset="
+            <div class="hero__lorem-ipsum">
+               <picture>
+                  <!-- desc -->
+                  <source srcset="
                      ./images/header/ice-cream__d.png    1x,
                      ./images/header/ice-cream__d@2x.png 2x
                   " type="image/png" media="(min-width: 1200px)" />
-               <!-- tablet -->
-               <source srcset="
+                  <!-- tablet -->
+                  <source srcset="
                      ./images/header/ice-cream__t.png    1x,
                      ./images/header/ice-cream__t@2x.png 2x
                   " type="image/png" media="(max-width: 1199px)" />
-               <img src="./images/header/ice-cream__t.png" alt="тарілка з (кульковим морозивом * 9)"
-                  class="hero__img" />
-            </picture>
-            <div class="hero__lorem">
-               <p class="hero__exscerpt">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et
-               </p>
-               <svg class="hero__arrow" height="16" width="40">
-                  <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
-               </svg>
+                  <img src="./images/header/ice-cream__t.png" alt="тарілка з (кульковим морозивом * 9)"
+                     class="hero__img" />
+               </picture>
+               <div class="hero__lorem">
+                  <p class="hero__exscerpt">
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                     do eiusmod tempor incididunt ut labore et
+                  </p>
+                  <svg class="hero__arrow" height="16" width="40">
+                     <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
+                  </svg>
+               </div>
             </div>
          </div>
-      </div>
-      <div class="hero__company-info">
-         <picture>
-            <source srcset="./images/header/clipped/ice-cream-cone__clipped-d.png" type="image/png"
-               media="(min-width: 1200px)" />
-            <source srcset="./images/header/clipped/ice-cream-cone__clipped-t.png" type="image/png"
-               media="(min-width: 768px)" />
-            <source srcset="./images/header/clipped/ice-cream-cone__clipped-m.png" type="image/png"
-               media="(max-width: 767px)" />
-            <img src="./images/header/clipped/ice-cream-cone__clipped-d.png" alt="упоротий змій-морозинич, який кліпає"
-               class="hero__img-animation" />
-         </picture>
-         <picture>
-            <!-- desc -->
-            <source srcset="
+         <div class="hero__company-info">
+            <picture>
+               <source srcset="./images/header/clipped/ice-cream-cone__clipped-d.png" type="image/png"
+                  media="(min-width: 1200px)" />
+               <source srcset="./images/header/clipped/ice-cream-cone__clipped-t.png" type="image/png"
+                  media="(min-width: 768px)" />
+               <source srcset="./images/header/clipped/ice-cream-cone__clipped-m.png" type="image/png"
+                  media="(max-width: 767px)" />
+               <img src="./images/header/clipped/ice-cream-cone__clipped-d.png"
+                  alt="упоротий змій-морозинич, який кліпає" class="hero__img-animation" />
+            </picture>
+            <picture>
+               <!-- desc -->
+               <source srcset="
                   ./images/header/ice-cream-cone__d.png    1x,
                   ./images/header/ice-cream-cone__d@2x.png 2x
                " type="image/png" media="(min-width: 1200px)" />
-            <!-- tablet -->
-            <source srcset="
+               <!-- tablet -->
+               <source srcset="
                   ./images/header/ice-cream-cone__t.png    1x,
                   ./images/header/ice-cream-cone__t@2x.png 2x
                " type="image/png" media="(min-width: 768px)" />
-            <!-- mobile -->
-            <source srcset="
+               <!-- mobile -->
+               <source srcset="
                   ./images/header/ice-cream-cone__m.png    1x,
                   ./images/header/ice-cream-cone__m@2x.png 2x
                " type="image/png" media="(max-width: 767px)" />
-            <img src="./images/header/ice-cream-cone__t.png" alt="упоротий змій-морозинич"
-               class="hero__img-animation" />
-         </picture>
+               <img src="./images/header/ice-cream-cone__t.png" alt="упоротий змій-морозинич"
+                  class="hero__img-animation" />
+            </picture>
 
-         <!-- <div class="hero__cafe-info"> -->
-         <ul class="hero__list-cafe">
-            <li class="hero__item-cafe">
-               <p class="hero__text">
-                  <span class="hero__numbers">16</span><br />cafes
-               </p>
-            </li>
-            <li class="hero__item-cafe">
-               <p class="hero__text">
-                  <span class="hero__numbers">23</span><br />food trucks
-               </p>
-            </li>
-         </ul>
-         <!-- </div> -->
-      </div>
-   </section>
-</main>
+            <!-- <div class="hero__cafe-info"> -->
+            <ul class="hero__list-cafe">
+               <li class="hero__item-cafe">
+                  <p class="hero__text">
+                     <span class="hero__numbers">16</span><br />cafes
+                  </p>
+               </li>
+               <li class="hero__item-cafe">
+                  <p class="hero__text">
+                     <span class="hero__numbers">23</span><br />food trucks
+                  </p>
+               </li>
+            </ul>
+         </div>
+      </section>
+</div>
