--- a/src/partials/franches-modal.html
+++ b/src/partials/franches-modal.html
@@ -1,4 +1,4 @@
-<div class="franchise-modal" data-modal-franches>
+<div class="modal franchise-modal" data-modal-franches>
    <button class="modal-btn" type="button" data-modal-franches-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
