--- a/src/partials/hero-modal.html
+++ b/src/partials/hero-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-ingridients visually-hidden" data-modal-products>
+<div class="modal modal-ingridients visually-hidden" data-modal-products>
    <button class="modal-btn" type="button" data-modal-products-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
