--- a/src/partials/location-modal.html
+++ b/src/partials/location-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content" data-modal-location>
+<div class="modal modal-content" data-modal-location>
    <button class="modal-btn" type="button" data-modal-location-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
