--- a/src/partials/products-modal.html
+++ b/src/partials/products-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-buy visually-hidden" data-modal-buy-now>
+<div class="modal modal-buy visually-hidden" data-modal-buy-now>
    <button class="modal-btn" type="button" data-modal-buy-now-close>
       <svg width="20" height="20">
          <use href="./images/icons.svg#icon-menu-close"></use>
