изменила иконки на png, использовала before

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,37 +2,19 @@
    <h2 class="visually-hidden">advantages</h2>
    <div class="container advantages__container">
       <ul class="advantages__list">
-         <li class="advantages__item">
-            <div class="advantages__box">
-               <svg class="advantages__icon" width="50" height="50">
-                  <use href="./images/icons.svg#icon-cow">
-                  </use>
-               </svg>
-            </div>
-            <span class="advantages__info">721</span>
+         <li class="advantages__item advantages__item--cow">
+            <p class="advantages__info">721</p>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
          </li>
-         <li class="advantages__item">
-            <div class="advantages__box">
-               <svg class="advantages__icon" width="50" height="50">
-                  <use href="./images/icons.svg#icon-weight">
-                  </use>
-               </svg>
-            </div>
-            <span class="advantages__info">16kg</span>
+         <li class="advantages__item advantages__item--weight">
+            <p class="advantages__info">16kg</p>
             <p class="advantages__text">Aliquam ac dui vel dui
                vulputate
                consectetur. Mauris
                massa.</p>
          </li>
-         <li class="advantages__item">
-            <div class="advantages__box">
-               <svg class="advantages__icon" width="50" height="50">
-                  <use href="./images/icons.svg#icon-ice-cream">
-                  </use>
-               </svg>
-            </div>
-            <span class="advantages__info">84</span>
+         <li class="advantages__item advantages__item--icecream">
+            <p class="advantages__info">84</p>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
          </li>
       </ul>
