--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -2,12 +2,6 @@
         padding-bottom: 60px;
     }
 
-
-    .advantages__box {
-        @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
-        @include flex();
-    }
-
     .advantages__list {
         @include flex($gap: 27px, $fd: column);
     }
@@ -15,6 +9,43 @@
     .advantages__item {
         @include flex($fd: column, $gap: 16px);
         width: 100%;
+
+        &::before {
+            content: '';
+            @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
+            @include flex();
+        }
+
+        &.advantages__item--cow::before {
+            background-image: url(../images/advantages/cow.png);
+            background-repeat: no-repeat;
+            background-position: center;
+
+            @include isRetinaDisplay() {
+             background-image: url(../images/advantages/cow@2x.png);
+
+            }
+        }
+
+        &.advantages__item--weight::before {
+            background-image: url(../images/advantages/weight.png);
+            background-repeat: no-repeat;
+            background-position: center;
+
+            @include isRetinaDisplay() {
+            background-image: url(../images/advantages/weight@2x.png);
+            }
+        }
+
+        &.advantages__item--icecream::before {
+            background-image: url(../images/advantages/ice.png);
+            background-repeat: no-repeat;
+            background-position: center;
+
+            @include isRetinaDisplay() {
+              background-image: url(../images/advantages/ice@2x.png);
+            }
+        }
     }
 
     .advantages__icon {
@@ -36,13 +67,6 @@
             padding-bottom: 204px;
         }
 
-
-        .advantages__box {
-            @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
-            @include flex();
-            margin-bottom: 16px;
-        }
-
         .advantages__list {
             @include flex($gap: 80px);
         }
@@ -50,6 +74,14 @@
         .advantages__item {
             @include flex($fd: column, $gap: 16px);
             width: calc((100% - 80px * 2) / 3);
+
+            &::before {
+                content: '';
+
+                @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
+                @include flex();
+                margin-bottom: 16px;
+            }
         }
 
         .advantages__icon {
@@ -72,13 +104,6 @@
             padding-bottom: 180px;
         }
 
-
-        .advantages__box {
-            @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
-            @include flex();
-            margin-bottom: 24px;
-        }
-
         .advantages__list {
             @include flex();
         }
@@ -86,6 +111,14 @@
         .advantages__item {
             @include flex($fd: column, $gap: 16px);
             width: calc((100% - 32px * 2) / 3);
+
+            &::before {
+                content: '';
+
+                @include block($w: 50px, $h: 50px, $bg: getColor(accent), $radius: 50%);
+                @include flex();
+                margin-bottom: 24px;
+            }
         }
 
         .advantages__icon {
