--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="contacts container">
-   <h2 class="contacts__title visually-hidden">Contacts</h2>
+   <h2 id="contact" class="contacts__title visually-hidden">Contacts</h2>
    <ul class="contacts__list">
       <li class="contacts__item">
          <div class="contacts__div">
